[project]
name = "laika-stats"
version = "0.1.0"
description = "Add your description here"
readme = "For trackingn my dogs weight since we adopted her (she's a good girl)."
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "scipy>=1.15.3",
]
